--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -16,12 +16,22 @@
 
     ul li a {
         color: #000;
-        font-size: 14px;
-        font-weight: 600;
+        font-size: 16px;
+        font-family: "Microsoft YaHei";
     }
 
     ul li a:hover {
         color: #9b761d
+    }
+
+    #top div a{
+        font-family: "Microsoft YaHei";
+        text-decoration: none;font-size:12px;color: #000;
+    }
+
+    #bottom{
+        font-size: 12px;
+        font-family: "Microsoft YaHei";
     }
 </style>
 <script>
@@ -32,7 +42,7 @@
         }
         if(aQuery.indexOf("status")>0){
             $('#bottom').empty();
-            $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;'>" +
+            $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
             $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='index.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='index.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
@@ -49,7 +59,7 @@
                 },
                 success:function(r){
                     var content='<pre>'+r.msg.content+'</pre>';
-                    var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif'>"+r.msg.title+"</pre>";
+                    var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>"+r.msg.title+"</pre>";
                     $('#title').html(title);
                     $('#content').html(content);
                     $('#foot').text(r.msg.note);
@@ -60,8 +70,8 @@
                 "url":'/home/index/home',
                 "dataType":'json',
                 success:function(r){
-                    var content='<pre>'+r.msg.content+'</pre>';
-                    var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif'>"+r.msg.title+"</pre>";
+                    var content="<pre style='margin-top:50px;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei'''>"+r.msg.content+"</pre>";
+                    var title="<pre style='font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'>"+r.msg.title+"</pre>";
                     $('#title').html(title);
                     $('#content').html(content);
                     $('#foot').text(r.msg.note);
@@ -80,7 +90,7 @@
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html" id="index" style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a href="index.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1" style="text-decoration: none; color: #000">English</a>
+            <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="index.html">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1">English</a>
             </div>
             <ul style="list-style: none;" >
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -114,16 +124,14 @@
 </div>
 <div class="container" style="margin-top: 50px;">
     <div class="row">
-        <div class="col-lg-12" id="title"
-             style="font-size: 36px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif">
+        <div class="col-lg-12" id="title">
 
         </div>
-        <div class="col-lg-12" id="content"
-             style="color:#525c75;margin-top:50px;font-size: 14px; text-align: center; font-family: 'Microsoft YaHei', sans-serif">
+        <div class="col-lg-12" id="content">
 
         </div>
         <div class="col-lg-12" id="foot"
-             style="margin-top:50px;font-size: 20px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif">
+             style="margin-top:50px;font-size: 18px; text-align: center; color:#525c75;font-family: 'Microsoft YaHei'">
 
         </div>
     </div>
@@ -131,7 +139,7 @@
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
     <div class="row" id="bottom">
         <div class="col-lg-12"
-             style="color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;">
+             style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
             麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
