--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -16,12 +16,22 @@
 
     ul li a {
         color: #000;
-        font-size: 14px;
-        font-weight: 600;
+        font-size: 16px;
+        font-family: "Microsoft YaHei";
     }
 
     ul li a:hover {
         color: #9b761d
+    }
+
+    #top div a{
+        font-family: "Microsoft YaHei";
+        text-decoration: none;font-size:12px;color: #000;
+    }
+
+    #bottom{
+        font-size: 12px;
+        font-family: "Microsoft YaHei";
     }
 </style>
 <script>
@@ -29,7 +39,7 @@
         var aQuery = window.location.href;  //取得Get参数
         if (aQuery.indexOf("status")>0) {
             $('#bottom').empty();
-            $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;'>" +
+            $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
             $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='law.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='law.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
@@ -53,10 +63,7 @@
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html" id="index"
-                                                     style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a
-                    href="abort.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a
-                    href="abort.html?status=1" style="text-decoration: none; color: #000">English</a>
+            <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="abort.html">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -96,7 +103,7 @@
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
     <div class="row" id="bottom">
         <div class="col-lg-12"
-             style="color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;">
+             style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
             麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
