--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -16,14 +16,18 @@
 
     ul li a {
         color: #000;
-        font-size: 14px;
-        font-weight: 600;
+        font-size: 16px;
+        font-family: "Microsoft YaHei";
     }
 
     ul li a:hover {
         color: #9b761d
     }
 
+    #top div a{
+        font-family: "Microsoft YaHei";
+        text-decoration: none;font-size:12px;color: #000;
+    }
     #search {
         display: block;
         width: 30px;
@@ -46,6 +50,11 @@
     .content {
         font-size: 12px;
     }
+
+    #bottom{
+        font-size: 12px;
+        font-family: "Microsoft YaHei";
+    }
 </style>
 <script>
     $(function () {
@@ -55,7 +64,7 @@
         }
         if(aQuery.indexOf("status")>0){
             $('#bottom').empty();
-            $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;'>" +
+            $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
             $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='news.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='news.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
@@ -75,7 +84,7 @@
                     for (var i = 0; i < len; i++) {
                         $('#news_list').append("<div class='col-lg-1 col-lg-offset-1'>" + r.msg[i].time + "</div>" +
                         "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
-                        "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].content1 + "</div>" +
+                        "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
                         "<hr class='col-lg-10 col-lg-offset-1'>");
                     }
                 }
@@ -89,7 +98,7 @@
                     for (var i = 0; i < len; i++) {
                         $('#news_list').append("<div class='col-lg-1 col-lg-offset-1'>" + r.msg[i].time + "</div>" +
                         "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
-                        "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].content1 + "</div>" +
+                        "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
                         "<hr class='col-lg-10 col-lg-offset-1'>");
                     }
                 }
@@ -110,7 +119,7 @@
                     for (var i = 0; i < len; i++) {
                         $('#news_list').append("<div class='col-lg-1 col-lg-offset-1'>" + r.msg[i].time + "</div>" +
                         "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
-                        "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].content1 + "</div>" +
+                        "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
                         "<hr class='col-lg-10 col-lg-offset-1'>");
                     }
                 }
@@ -139,7 +148,7 @@
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html" style="text-decoration: none;color: #000">首页</a>&nbsp;&nbsp;<a href="news.html" style="text-decoration: none; color: #000">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1" style="text-decoration: none; color: #000">English</a>
+            <div style="text-align: right"><a href="index.html">首页</a>&nbsp;&nbsp;<a href="news.html">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -185,7 +194,7 @@
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
     <div class="row" id="bottom">
         <div class="col-lg-12"
-             style="color: #ffffff;text-align: center;font-weight: 600;margin-top: 20px;margin-bottom: 20px;">
+             style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
             麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
