--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -42,7 +42,9 @@
                     for (var n = 0; n < count; n++) {
                         $('#row_title').append("<div class='status' style='width: 100%'><div class='form-group' style='margin-top: 20px;'>" +
                         "<label class='col-sm-1 control-label'>标题</label><div class='col-sm-6'>" +
-                        "<input type='text' value='"+ r.msg.content[n][0]+"' class='form-control' id='title" + n + "'></div></div>" +
+                        "<input type='text' value='"+ r.msg.content[n][0]+"' class='form-control' id='title" + n + "'></div>" +
+                        "<label class='col-sm-1 control-label'>英文</label>" +
+                        "<div class='col-sm-3'><input type='text' value='"+ r.msg.content[n][2]+"' class='form-control' id='en" + n + "' ></div></div>" +
                         "<div class='form-group' style='margin-top: 20px;'>" +
                         "<label class='col-sm-1 control-label'>内容</label><div class='col-sm-10'> " +
                         "<pre><textarea class=' form-control' id='content" + n + "'>"+ r.msg.content[n][1]+"</textarea></pre></div></div></div>");
@@ -53,13 +55,16 @@
         function save(id) {
             var lenth = $('#row_title .status').children('.form-group').length / 2;
             var menu = $('#menu').val();
+            var english = $('#english').val();
             var title = [];
             var content = [];
+            var en = [];
             var show = $('#show').val();
             var zn_en = $('#zn_en').val();
             for (var i = 0; i < lenth; i++) {
                 title.push($('#title' + i).val());
                 content.push($('#content' + i).val());
+                en.push($('#en' + i).val());
             }
             $.ajax({
                 url: '/admin/menu/menu_save',
@@ -68,8 +73,10 @@
                 data: {
                     "id": id,
                     "menu": menu,
+                    "english":english,
                     "title": title,
                     "content": content,
+                    "en": en,
                     "show": show,
                     "zn_en":zn_en
                 },
@@ -89,13 +96,16 @@
             var lenth = $('#row_title .status').children('.form-group').length / 2;
             var button = $('#insert').text();
             var menu = $('#menu').val();
+            var english = $('#english').val();
             var title = [];
             var content = [];
+            var en = [];
             var show = $('#show').val();
             var zn_en = $('#zn_en').val();
             for (var i = 0; i < lenth; i++) {
                 title.push($('#title' + i).val());
                 content.push($('#content' + i).val());
+                en.push($('#en' + i).val());
             }
             if (button == '保存') {
                 save(this_id);
@@ -107,7 +117,9 @@
                     data: {
                         "menu": menu,
                         "title": title,
+                        "english":english,
                         "content": content,
+                        "en": en,
                         "show": show,
                         "zn_en":zn_en
                     },
@@ -131,7 +143,9 @@
         function title_add() {
             $('#row_title').append("<div class='status' style='width: 100%'><div class='form-group' style='margin-top: 20px;'>" +
             "<label class='col-sm-1 control-label'>标题</label><div class='col-sm-6'>" +
-            "<input type='text' class='form-control' id='title" + title_num + "'></div></div>" +
+            "<input type='text' class='form-control' id='title" + title_num + "'></div>" +
+            "<label class='col-sm-1 control-label'>英文</label>" +
+            "<div class='col-sm-3'><input type='text' class='form-control' id='en" + title_num + "'></div></div>" +
             "<div class='form-group' style='margin-top: 20px;'>" +
             "<label class='col-sm-1 control-label'>内容</label><div class='col-sm-10'> " +
             "<pre><textarea class=' form-control' id='content" + title_num + "'></textarea></pre></div></div></div>");
@@ -174,10 +188,6 @@
 
     pre{
         padding: 0;
-    }
-
-    textarea{
-        height: 200px !important;
     }
 </style>
 <body>
@@ -278,6 +288,10 @@
 
                         <div class="col-sm-6">
                             <input type="text" class="form-control" id="menu">
+                        </div>
+                        <label class="col-sm-1 control-label">英文</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="english">
                         </div>
                     </div>
                     <div id="row_title" style="width: 100%;">
