--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -24,12 +24,14 @@
         color: #9b761d
     }
 
-    #top div a{
+    #top div a {
         font-family: "Microsoft YaHei";
-        text-decoration: none;font-size:12px;color: #000;
+        text-decoration: none;
+        font-size: 12px;
+        color: #000;
     }
 
-    #bottom{
+    #bottom {
         font-size: 12px;
         font-family: "Microsoft YaHei";
     }
@@ -42,6 +44,7 @@
             $("#abort").css('color', '#9b761d');
         }
         if (aQuery.indexOf("status") > 0) {
+            $('#menu img').attr('src','/Public/home/images/abort_us_en.jpg');
             $('#title').text('Maision Message');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
@@ -74,7 +77,7 @@
                 success: function (r) {
                     var length = r.msg.length;
                     for (var i = 0; i < length; i++) {
-                        $('#menu').append("<div class='row'><div class='col-lg-2 col-lg-offset-1 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "</div></div>");
+                        $('#menu').append("<div class='menu' style='width: 180px;' onclick='menu_detail(this," + r.msg[i].id + ")'>" + r.msg[i].menu + "</div>");
                     }
                 }
             });
@@ -94,14 +97,16 @@
                 success: function (r) {
                     var length = r.msg.length;
                     for (var i = 0; i < length; i++) {
-                        $('#menu').append("<div class='row'><div class='col-lg-2 col-lg-offset-1 menu' onclick='menu_detail(" + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div></div>");
+                        $('#menu').append("<div class='menu' style='width: 180px;' onclick='menu_detail(this," + r.msg[i].id + ")'>" + r.msg[i].menu + "<br>" + r.msg[i].english + "</div>");
                     }
                 }
             });
         }
     });
 
-    function menu_detail(id) {
+    function menu_detail(ids,id) {
+        $(ids).css('background-color','#b3b3b3');
+        $(ids).css('color','#FFFFFF');
         $('#detail').empty();
         $.ajax({
             "url": '/home/index/menu_detail',
@@ -112,9 +117,9 @@
             success: function (r) {
                 var len = r.msg.content.length;
                 for (var i = 0; i < len; i++) {
-                    $('#detail').append("<div class='col-lg-8 col-lg-offset-4' style='border-bottom:1px #BBB solid;margin-bottom: 20px;padding-bottom: 20px;'>" +
-                    "<div class='col-lg-1'><img src='/Public/home/images/1.jpg'></div><div class='title'>" + r.msg.content[i][0] + "</div>" +
-                    "<div class='content col-lg-offset-1' style='margin-top: 10px;'><pre style='font-size: 14px;text-align: left !important; padding: 0'>" + r.msg.content[i][1] + "</pre></div></div>");
+                    $('#detail').append("<div class='col-lg-12' style='padding-bottom: 20px;'>" +
+                    "<div class='col-lg-1'><img style='margin-top: 5px;' src='/Public/home/images/1.jpg'></div><div class='title'>" + r.msg.content[i][0] + "</div>" +
+                    "<div class='content col-lg-offset-1' style='margin-top: 10px;'><pre style='font-size: 14px;text-align: left !important; padding: 0'>" + r.msg.content[i][1] + "</pre><div style='width:105%;height:20px;margin-left:-5%;border-bottom: 1px #cfcfcf solid'></div></div></div>");
                 }
             }
         })
@@ -126,48 +131,46 @@
         border: 0;
         font-size: 16px;
         text-align: center;
-        font-family: 'Microsoft YaHei', sans-serif
+        font-family: 'Microsoft YaHei';
     }
 
     #menu {
-        margin-top: 20px;
-        position: absolute;
+        margin-top: 0;
+        background-color: #f2f2f2;
+        padding: 0;
     }
 
     .menu {
+        margin-top: 0px;
+        font-family: "Microsoft YaHei";
         font-size: 16px;
-        font-weight: 600;
-        background-color: #EEE;
-        text-align: center;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        border-bottom: #fff solid
+        height: 80px;
+        background-color: #f9f9f9;
+        text-align: left;
+        padding-left: 30px;
+        padding-top: 21px;
     }
 
     .menu:hover {
         cursor: pointer;
-        background-color: #999;
+        background-color: #b3b3b3;
         color: #fff;
     }
 
     .title {
-        font-size: 20px;
-        font-weight: 600;
+        font-size: 24px;
+        font-family: "Microsoft YaHei";
     }
 
     .en {
         font-size: 14px;
-        font-weight: 600;
         color: #9b761d;
+        font-family: "Microsoft YaHei";
     }
 
     .content {
-        font-size: 12px;
-        font-family: "Microsoft YaHei", sans-serif;
-    }
-
-    .col-lg-2{
-        width: 14%; !important;
+        font-size: 14px;
+        font-family: "Microsoft YaHei";
     }
 </style>
 <body>
@@ -177,7 +180,8 @@
             <img style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-6 col-lg-offset-2" id="top">
-            <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="abort.html">中文</a>&nbsp;|&nbsp;<a href="abort.html?status=1">English</a>
+            <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="abort.html">中文</a>&nbsp;|&nbsp;<a
+                    href="abort.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
@@ -195,34 +199,33 @@
     </div>
 </div>
 <div class="container" style="margin-top: -50px;">
-    <div class="row" style="width: 100%;margin-top: -10px;" id="menu">
-        <div class="row">
-        <div class="col-lg-2 col-lg-offset-1" style="padding: 0;margin-bottom: 10px;">
-            <img src="/Public/home/images/abort_us.jpg" style="opacity:0.9;-webkit-opacity:0.9;width: 100%;">
+    <div class="row">
+        <div class="col-lg-offset-1" style="width: 180px;float: left" id="menu">
+            <img src="/Public/home/images/abort_us.jpg" style="opacity:0.9;-webkit-opacity:0.9;margin-bottom: 33px;">
         </div>
-        </div>
-    </div>
-    <div class="row" id="detail" style="margin-top: 120px;">
-        <div class="col-lg-10 col-lg-offset-2" id="title"
-             style="font-size: 24px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei', sans-serif">
-            麦星寄语
-        </div>
-        <div class="col-lg-4 col-lg-offset-5" style="margin-top: 10px; text-align: center">
-            <hr style="border-color: #525c75;width: 37%;float: left;">
-            <p style="color: #9b761d;padding-top:10px;font-weight:600;float: left">&nbsp;&nbsp;&nbsp;&nbsp;Message&nbsp;&nbsp;&nbsp;&nbsp;</p>
-            <hr style="border-color: #525c75;width: 37%;float: left">
-        </div>
-        <div class="col-lg-8 col-lg-offset-3" id="content"
-             style="line-height:40px;margin-top:10px;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif">
+        <div id="detail" class="col-lg-8" style="margin-top: 120px;">
+            <div class="col-lg-8 col-lg-offset-2" id="title"
+                 style="font-size: 24px; text-align: center; color:#525c75;font-weight: 600;font-family: 'Microsoft YaHei'">
+                麦星寄语
+            </div>
+            <div class="col-lg-8 col-lg-offset-2" style="margin-top: 10px; text-align: center">
+                <hr style="border-color: #525c75;width: 20%;margin-left:20%;float: left">
+                <p style="color: #9b761d;padding-top:10px;font-weight:600;float: left;width: 20%">&nbsp;&nbsp;&nbsp;&nbsp;Message&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                <hr style="border-color: #525c75;width: 20%;float: left">
+            </div>
+            <div class="col-lg-12" id="content"
+                 style="line-height:40px;margin-top:10px;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif">
 
+            </div>
         </div>
     </div>
 </div>
 <div class="container" style="margin-top: 50px;width:100%;background-color: #525c75">
-    <div class="row" id="bottom">
+    <div class="row" id="bottom" style="">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
-            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
+            麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html"
+                                                                         style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
 </div>
