--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -98,6 +98,10 @@
     }
     #from1{margin-left: -5%}
     #auth1{margin-left: -2%}
+
+    #content1,#content2,#content3{
+        padding: 1px;
+    }
 </style>
 <body>
 <div class="container" style="margin-top: 10px;width: 100% !important;">
