--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -127,6 +127,9 @@
         <div class="col-lg-12" id="title">
 
         </div>
+        <div class="col-lg-2 col-lg-offset-5">
+            <div class="col-lg-4 col-lg-offset-4" style="border-bottom: 3px #CFCFCF solid;"></div>
+        </div>
         <div class="col-lg-12" id="content">
 
         </div>
