--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -89,6 +89,9 @@
     }
 </script>
 <style>
+    ul li a{
+        color: #4c4c4c;
+    }
     pre {
         background-color: #ffffff;
         border: 0;
