--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -81,6 +81,9 @@
     });
 </script>
 <style>
+    ul li a{
+        color: #4c4c4c;
+    }
     pre{background-color: #ffffff;border: 0;font-size: 16px; text-align: center; font-family: 'Microsoft YaHei', sans-serif}
 </style>
 <body>
@@ -92,7 +95,7 @@
         <div class="col-lg-6 col-lg-offset-2" id="top">
             <div style="text-align: right"><a href="index.html" id="index">首页</a>&nbsp;&nbsp;<a href="index.html">中文</a>&nbsp;|&nbsp;<a href="index.html?status=1">English</a>
             </div>
-            <ul style="list-style: none;" >
+            <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
                 <li><a href="news.html" style="text-decoration: none;" id="news">新闻动态</a></li>
                 <li><a href="#" style="text-decoration: none;">投资案例</a></li>
