--- a/Public/home/law.html
+++ b/Public/home/law.html
@@ -15,7 +15,7 @@
     }
 
     ul li a {
-        color: #000;
+        color: #4c4c4c;
         font-size: 16px;
         font-family: "Microsoft YaHei";
     }
