--- a/Public/admin/abort.html
+++ b/Public/admin/abort.html
@@ -164,7 +164,7 @@
                                 class="fa fa-angle-double-left toggle-left"></i>
                         </button>
                     </li>
-                    <li class="submenu">
+                    <!--<li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
                                 class="hidden-minibar">  首页管理 <span class="badge bg-primary pull-right">1</span></a>
                         <ul>
@@ -172,7 +172,7 @@
                                     class="fa fa-table"></i><span> 内容管理</span></a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li class="submenu">
                         <a class="dropdown" href="#" data-original-title="Tables"><i class="glyphicon glyphicon-th-list"></i><span
                                 class="hidden-minibar"> 团队管理 <span class="badge bg-primary pull-right">2</span></a>
