--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -141,7 +141,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-8 col-lg-offset-2">
-            <img style="width: 100%" id="img1" src=""/>
+            <img style="width: 100%;height: 300px;" id="img1" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
@@ -151,7 +151,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-8 col-lg-offset-2">
-            <img style="width: 100%" id="img2" src=""/>
+            <img style="width: 100%;height: 300px;" id="img2" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
@@ -161,7 +161,7 @@
     </div>
     <div class="row" style="margin-top: 10px;">
         <div class="col-lg-8 col-lg-offset-2">
-            <img style="width: 100%" id="img3" src=""/>
+            <img style="width: 100%;height: 300px;" id="img3" src=""/>
         </div>
     </div>
     <div class="row" style="margin-top: 10px;">
