--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 30px;
+        margin-left: 50px;
         margin-top: 10px;
     }
 
@@ -59,8 +59,8 @@
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
-            $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='contact.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='contact.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
-            "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
+            $('#top').append("<div style='text-align: right'><a href='contact.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='contact.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
+            "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;color: #9b761d' id='contact'>Contact Us</a></li>" +
             "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>News</a></li>" +
             "<li><a href='#' style='text-decoration: none;'>Investment Case</a></li>" +
             "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
@@ -125,6 +125,14 @@
             });
         }
     });
+    function home(){
+        var aQuery = window.location.href;  //取得Get参数
+        if(aQuery.indexOf("status")>0){
+            window.location.href='index.html?status=1';
+        }else{
+            window.location.href='index.html';
+        }
+    }
 </script>
 <style>
     ul li a{
@@ -138,6 +146,7 @@
         font-size: 16px;
         font-weight: 600;
         margin-bottom: 25px;
+        color: #4c4c4c !important;
         font-family: "Microsoft YaHei"
     }
 
@@ -167,6 +176,7 @@
     }
 
     .contact p{
+        color: #a5a5a5;
         font-family: "Microsoft YaHei";
     }
 
@@ -286,10 +296,10 @@
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="home()" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-8" id="top">
-            <div style="text-align: right"><a href="contact.html">中文</a>&nbsp;|&nbsp;<a href="contact.html?status=1">English</a>
+            <div style="text-align: right"><a href="contact.html"style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="contact.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
