--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 30px;
+        margin-left: 50px;
         margin-top: 10px;
     }
 
@@ -68,9 +68,9 @@
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
-            $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='news.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='news.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
+            $('#top').append("<div style='text-align: right'><a href='news.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='news.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
             "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
-            "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>News</a></li>" +
+            "<li><a href='news.html?status=1' style='text-decoration: none;color: #9b761d' id='news'>News</a></li>" +
             "<li><a href='#' style='text-decoration: none;'>Investment Case</a></li>" +
             "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
@@ -83,10 +83,10 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='padding-top: 2px;'><span style='font-size: 16px'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px;'>" + r.msg[i].time2 + "</span></div>" +
+                        $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='padding-top: 2px;'><span style='font-size: 16px; color: #7c7c7c'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px; color: #7c7c7c'>" + r.msg[i].time2 + "</span></div>" +
                         "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
                         "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
-                        "<hr class='col-lg-10 col-lg-offset-1'>");
+                        "<hr class='col-lg-9 col-lg-offset-2'>");
                     }
                 }
             });
@@ -97,10 +97,10 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='text-align: center'><span style='font-size: 16px'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px;'>" + r.msg[i].time2 + "</span></div>" +
+                        $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='text-align: center'><span style='font-size: 16px; color: #7c7c7c'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px; color: #7c7c7c'>" + r.msg[i].time2 + "</span></div>" +
                         "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
                         "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
-                        "<hr class='col-lg-10 col-lg-offset-1'>");
+                        "<hr class='col-lg-9 col-lg-offset-2'>");
                     }
                 }
             });
@@ -118,10 +118,10 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
-                        $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='text-align: center'><span style='font-size: 16px'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px;'>" + r.msg[i].time2 + "</span></div>" +
+                        $('#news_list').append("<div class='col-lg-1 col-lg-offset-1' style='text-align: center'><span style='font-size: 16px; color: #7c7c7c'>" + r.msg[i].time1 + "</span><br><span style='font-size: 14px; color: #7c7c7c'>" + r.msg[i].time2 + "</span></div>" +
                         "<div class='col-lg-9'><a href='news_detail.html?id=" + r.msg[i].id + "' class='title'>" + r.msg[i].title + "</a></div>" +
                         "<div class='col-lg-9 col-lg-offset-2 content'>" + r.msg[i].intro + "</div>" +
-                        "<hr class='col-lg-10 col-lg-offset-1'>");
+                        "<hr class='col-lg-9 col-lg-offset-2'>");
                     }
                 }
             });
@@ -137,12 +137,20 @@
        $('#news_list').css('overflow-y','hidden');
        $('#show').css('display','block');
    }
+    function home(){
+        var aQuery = window.location.href;  //取得Get参数
+        if(aQuery.indexOf("status")>0){
+            window.location.href='index.html?status=1';
+        }else{
+            window.location.href='index.html';
+        }
+    }
 </script>
 <style>
-    .title{font-family: "Microsoft YaHei"; font-size: 18px; font-weight: 600 !important;}
+    .title{font-family: "Microsoft YaHei"; color: #4c4c4c; font-size: 18px; font-weight: 600 !important;}
     #news_list{height: 1000px; overflow-y: hidden;}
     #show,#up:hover{cursor: pointer}
-    .content{margin-top: -5px; font-family: "Microsoft YaHei"; font-size: 14px;}
+    .content{margin-top: -5px; font-family: "Microsoft YaHei"; font-size: 14px; color: #7c7c7c}
     #log:hover{
         cursor: pointer;
     }
@@ -250,10 +258,10 @@
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
+            <img id="log" onclick="home()" style="padding-top: 5px;" src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-8 " id="top">
-            <div style="text-align: right"><a href="news.html">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
+            <div style="text-align: right"><a href="news.html"style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a href="news.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
                 <li><a href="contact.html" style="text-decoration: none;" id="contact">联系我们</a></li>
