--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -10,7 +10,7 @@
 <style>
     ul li {
         float: right;
-        margin-left: 30px;
+        margin-left: 50px;
         margin-top: 10px;
     }
 
@@ -75,9 +75,9 @@
         border-radius: 15px;
         position: absolute;
         z-index: 10;
-        background-color: #666;
-        opacity: 0.7;
-        -webkit-opacity: 0.7;
+        background-color: #525c75;
+        opacity: 0.8;
+        -webkit-opacity: 0.8;
         overflow: hidden;
         display: none;
     }
@@ -130,11 +130,11 @@
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
             "Maison Capital&nbsp;&nbsp;&nbsp;&nbsp;Copy Right©&nbsp;&nbsp;|&nbsp;&nbsp;<a href='law.html' style='text-decoration: none;color: #fff'>Legal explanation</a></div>");
             $('#top').empty();
-            $('#top').append("<div style='text-align: right'><a href='index.html?status=1' id='index' style='text-decoration: none;color: #000'>Home</a>&nbsp;&nbsp;<a href='team.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='team.html?status=1' style='text-decoration: none; color: #000'>English</a>" +
+            $('#top').append("<div style='text-align: right'><a href='team.html' style='text-decoration: none; color: #000'>中文</a>&nbsp;|&nbsp;<a href='team.html?status=1' style='text-decoration: none; color: #9b761d'>English</a>" +
             "</div><ul style='list-style: none;'><li><a href='contact.html?status=1' style='text-decoration: none;' id='contact'>Contact Us</a></li>" +
             "<li><a href='news.html?status=1' style='text-decoration: none;' id='news'>News</a></li>" +
             "<li><a href='#' style='text-decoration: none;'>Investment Case</a></li>" +
-            "<li><a href='team.html?status=1' style='text-decoration: none;' id='team'>Investment Team</a></li>" +
+            "<li><a href='team.html?status=1' style='text-decoration: none;color: #9b761d' id='team'>Investment Team</a></li>" +
             "<li><a href='abort.html?status=1' style='text-decoration: none;' id='abort'>About Us</a></li></ul>");
             $.ajax({
                 "url": '/home/index/team',
@@ -195,6 +195,14 @@
 
     function hide(id) {
         $(id).find('.shade').css('display', 'none');
+    }
+    function home(){
+        var aQuery = window.location.href;  //取得Get参数
+        if(aQuery.indexOf("status")>0){
+            window.location.href='index.html?status=1';
+        }else{
+            window.location.href='index.html';
+        }
     }
 </script>
 <style>
@@ -314,11 +322,11 @@
 <div class="container" style="margin-top: 10px;width: 100% !important;">
     <div class="row">
         <div class="col-lg-4">
-            <img id="log" onclick="window.location.href='index.html'" style="padding-top: 5px;"
+            <img id="log" onclick="home()" style="padding-top: 5px;"
                  src="/Public/home/images/logo.jpg">
         </div>
         <div class="col-lg-8" id="top">
-            <div style="text-align: right"><a href="team.html">中文</a>&nbsp;|&nbsp;<a
+            <div style="text-align: right"><a href="team.html" style="color: #9b761d">中文</a>&nbsp;|&nbsp;<a
                     href="team.html?status=1">English</a>
             </div>
             <ul style="list-style: none;">
