--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -135,6 +135,10 @@
     }
 </script>
 <style>
+    #city_list{
+        height: 27px;
+        border-bottom: 2px #f4f4f4 solid;
+    }
     ul li a{
         color: #4c4c4c;
     }
