--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -148,7 +148,7 @@
 </script>
 <style>
     .title{font-family: "Microsoft YaHei"; color: #4c4c4c; font-size: 18px; font-weight: 600 !important;}
-    #news_list{height: 1000px; overflow-y: hidden;}
+    #news_list{max-height: 1000px; overflow-y: hidden;}
     #show,#up:hover{cursor: pointer}
     .content{margin-top: -5px; font-family: "Microsoft YaHei"; font-size: 14px; color: #7c7c7c}
     #log:hover{
