--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -45,6 +45,9 @@
         }
         if (aQuery.indexOf("status") > 0) {
             $('#menu img').attr('src','/Public/home/images/abort_us_en.jpg');
+            $('#menu img').click(function(){
+                window.location.href='abort.html?status=1';
+            });
             $('#title').text('Maision Message');
             $('#bottom').empty();
             $('#bottom').append("<div class='col-lg-12'style='color: #ffffff;text-align: center;margin-top: 20px;margin-bottom: 20px;'>" +
@@ -88,6 +91,9 @@
                 }
             });
         } else {
+            $('#menu img').click(function(){
+                window.location.href='abort.html';
+            });
             $.ajax({
                 "url": '/home/index/abort',
                 "dataType": 'json',
@@ -175,11 +181,15 @@
         padding: 0;
     }
 
+    #menu img:hover{
+        cursor: pointer;
+    }
     .menu {
         margin-top: 0px;
         font-family: "Microsoft YaHei";
         font-size: 16px;
         height: 80px;
+        color: #4c4c4c;
         background-color: #f9f9f9;
         text-align: left;
         padding-left: 30px;
@@ -341,7 +351,7 @@
 <div class="container" style="margin-top: -50px;">
     <div class="row">
         <div class="col-lg-offset-1" style="width: 180px;float: left" id="menu">
-            <img src="/Public/home/images/abort_us.jpg" style="opacity:0.9;-webkit-opacity:0.9;margin-bottom: 33px;">
+            <img src="/Public/home/images/abort_us.jpg" style="opacity:0.9;-webkit-opacity:0.9;margin-bottom: 33px;width: 180px">
         </div>
         <div id="detail" class="col-lg-8" style="margin-top: 120px;">
             <div class="col-lg-8 col-lg-offset-2" id="title"
